[FIX] runs on windows version

--- a/.github/workflows/dailyDatas.yml
+++ b/.github/workflows/dailyDatas.yml
@@ -1,12 +1,12 @@
 name: ETH-Price-Variation Daily Script
 on:
   schedule:
-    - cron:  '0 0 * * *'
+    - cron: "0 0 * * *"
 jobs:
   lastMonthData:
-    runs-on: windows-20H2
+    runs-on: windows-2022
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Run script
-      run: ./scripts/lastMonthData.sh
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run script
+        run: ./scripts/lastMonthData.sh
